deploy/notary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notaryserver
spec:
  selector:
    matchLabels:
      app: notary
      component: server
  template:
    metadata:
      labels:
        app: notary
        component: server
    spec:
      containers:
      - name: notaryserver
        image: notary:server-0.6.1-2
        args:
          - -config=/etc/notary/config/server-config.json
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4443
          name: grpc
        volumeMounts:
          - mountPath: /etc/notary/config
            name: notaryserver-config
          - mountPath: /etc/notary/tls
            name: notaryserver-tls
        securityContext:
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
      volumes:
        - name: notaryserver-config
          configMap:
            name: notaryserver
            optional: false
        - name: notaryserver-tls
          secret:
            secretName: notaryserver-tls
            optional: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notarysigner
spec:
  selector:
    matchLabels:
      app: notary
      component: signer
  template:
    metadata:
      labels:
        app: notary
        component: signer
    spec:
      containers:
      - name: notarysigner
        image: notary:signer-0.6.1-2
        args:
          - -config=/etc/notary/config/signer-config.json
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /etc/notary/config
            name: notarysigner-config
          - mountPath: /etc/notary/tls
            name: notarysigner-tls
        securityContext:
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
      volumes:
        - name: notarysigner-config
          configMap:
            name: notarysigner
            optional: false
        - name: notarysigner-tls
          secret:
            secretName: notarysigner-tls
            optional: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
