deploy/notary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notaryserver
spec:
  selector:
    app: notary
    component: server
  ports:
  - port: 4443
    targetPort: 4443

---

apiVersion: v1
kind: Service
metadata:
  name: notarysigner
spec:
  selector:
    app: notary
    component: signer
  ports:
  - port: 7899
    targetPort: 7899
